Fix flickering button animation from keyboard input and include spamming input.

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
     border: 5px solid rgba(255, 255, 255, 0.35);
     flex-basis: 400px;
     height: 540px;
-    padding: 20px 35px;
+    padding: 20px 35px 40px 35px;
 }
 
 .screen {
@@ -82,7 +82,7 @@ body {
     font-size: 24px;
     height: 65px;
     cursor: pointer;
-    transition: transform 0.1s, font-size 0.1s, box-shadow 0.25s ease;
+    transition: transform 0.1s  ease, font-size 0.1s ease, box-shadow 0.25s ease;
 }
 
 .calc-button:last-child {
@@ -94,7 +94,7 @@ body {
     box-shadow: 0 5px 0 rgba(197, 11, 104, 0.2);
     box-shadow: inset 0 -1px 0 #db52c2, 0 4px 0 #d033a6;
     color: #fff;
-    transition: transform 0.1s, font-size 0.1s, font-weight 0.1s, box-shadow 0.25s ease;
+    transition: transform 0.1s ease, font-size 0.1s ease, font-weight 0.1s ease, box-shadow 0.25s ease;
 }
 
 .calc-button:last-child:hover {
@@ -110,7 +110,8 @@ body {
     background-color: inherit;
 }
 
-.calc-button:active {
+.calc-button:active,
+.calc-button.pressed {
     box-shadow: none;
     font-size: 30px;
     transform: scale(1) translateY(5px);
@@ -118,7 +119,8 @@ body {
     border: 2px solid rgba(205, 205, 205, 0.4);
 }
 
-.calc-button:last-child:active {
+.calc-button:last-child:active,
+.calc-button.pressed:last-child {
     box-shadow: none;
     font-size: 30px;
     transform: scale(1) translateY(5px);
